trying out inline elements

--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -92,14 +92,13 @@
         skills. If you share a passion for art or are just curious about my creative process, this section will give you
         a glimpse into my world of drawing.
       </h2>
-      <div class="fixed-grid has-3-cols">
-        <div class="grid">
-          <div class="cell"><img src="../images/draw/curtain.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/draw/logostorm.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/draw/monkeys.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/draw/pizzasketch.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/draw/street.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/draw/pants.jpg" alt="" style="border-radius: 5%;"></div>
+      <div class="columns is-mobile is-centered is-vcentered">
+        <div class="column">
+          <img src="../images/draw/pizzasketch.jpg" alt="">
+        </div>
+        <div class="column">
+          <span class="title">Title</span><br>
+          <span class="subtitle">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</span>
         </div>
       </div>
     </section>
