--- a/html/blog.html
+++ b/html/blog.html
@@ -49,8 +49,8 @@
       </div>
 
       <!-- Left and Right GIFs -->
-      <img src="../images/gifs/tiki.webp" alt="Left Gif" class="largegif-overlay-left">
-      <img src="../images/gifs/tiki.webp" alt="Right Gif" class="largegif-overlay-right">
+      <img src="../images/gifs/tiki.webp" alt="Left Gif" class="largegif-overlay-left is-hidden-touch">
+      <img src="../images/gifs/tiki.webp" alt="Right Gif" class="largegif-overlay-right is-hidden-touch">
     </div>
 
     <!-- Hero footer: will stick at the bottom -->
