--- a/html/contact.html
+++ b/html/contact.html
@@ -80,8 +80,8 @@
         <h1 class="title" style="font-size: 80px;">Contact me!</h1>
         <p class="subtitle">Let's catch up for coffee.</p>
       </div>
-      <img src="../images/gifs/callme.webp" alt="Left Gif" class="largegif-overlay-left">
-      <img src="../images/gifs/callme.webp" alt="Right Gif" class="largegif-overlay-right">
+      <img src="../images/gifs/callme.webp" alt="Left Gif" class="largegif-overlay-left is-hidden-touch">
+      <img src="../images/gifs/callme.webp" alt="Right Gif" class="largegif-overlay-right is-hidden-touch">
     </div>
 
     <!-- Hero footer: will stick at the bottom -->
