--- a/html/social.html
+++ b/html/social.html
@@ -47,8 +47,8 @@
                 <h1 class="title" style="font-size: 80px; position: relative;">Social</h1>
                 <p class="subtitle">Volunteering & engagement</p>
             </div>
-            <img src="../images/gifs/cloves.webp" alt="Left Gif" class="largegif-overlay-left">
-            <img src="../images/gifs/cloves.webp" alt="Right Gif" class="largegif-overlay-right">
+            <img src="../images/gifs/cloves.webp" alt="Left Gif" class="largegif-overlay-left is-hidden-touch">
+            <img src="../images/gifs/cloves.webp" alt="Right Gif" class="largegif-overlay-right is-hidden-touch">
         </div>
 
         <!-- Hero footer: will stick at the bottom -->
