--- a/html/career.html
+++ b/html/career.html
@@ -47,8 +47,8 @@
         <h1 class="title" style="font-size: 80px; position: relative;">Career</h1>
         <p class="subtitle">What do I do and how I got here</p>
       </div>
-      <img src="../images/gifs/robot.webp" alt="Left Gif" class="largegif-overlay-left">
-      <img src="../images/gifs/robot.webp" alt="Right Gif" class="largegif-overlay-right">
+      <img src="../images/gifs/robot.webp" alt="Left Gif" class="largegif-overlay-left is-hidden-touch">
+      <img src="../images/gifs/robot.webp" alt="Right Gif" class="largegif-overlay-right is-hidden-touch">
     </div>
 
     <!-- Hero footer: will stick at the bottom -->
