--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <h1 class="title" style="font-size: 80px; color: rgb(34, 17, 13);">Anna Duras</h1>
                     <p class="subtitle">Welcome to my personal website!</p>
                 </div>
-                <img src="./images/gifs/stars.gif" alt="Coffee" class="largegif-overlay-left">
-                <img src="./images/gifs/stars.gif" alt="Cloves" class="largegif-overlay-right">
+                <img src="./images/gifs/stars.gif" alt="Coffee" class="largegif-overlay-left is-hidden-touch">
+                <img src="./images/gifs/stars.gif" alt="Cloves" class="largegif-overlay-right is-hidden-touch">
             </div>
 
             <div class="hero-foot">
@@ -77,9 +77,6 @@
                             </li>
                             <li>
                                 <a href="./html/social.html" style="color: #7484fd;">Social</a>
-                            </li>
-                            <li>
-                                <a href="./html/blog.html" style="color: #7484fd;">Blog</a>
                             </li>
                             <li>
                                 <a href="./html/contact.html" style="color: #7484fd;">Contact</a>
