--- a/html/hobbies.html
+++ b/html/hobbies.html
@@ -138,21 +138,57 @@
       </h2>
     </section>
     <section class="section is-medium" id="languages-content" style="display: none;">
-      <h1 class="title" style="margin-bottom: 2rem;">Language Section</h1>
-      <h2 class="subtitle" style="line-height: 2;">
-        Learning new languages was always my strong trait.<br> All of the school grades I always was top student when it
-        came to learning languages - english, german, spanish and even some french. When I got out of school, I realised
-        that learning languages is not only easy for me, but also fun! <br>I learned basics of USL to share it to a
-        wider range of people. <br>Now, I'm learning swedish and really excited to practice it soon!
-      </h2>
-      <div class="fixed-grid has-3-cols">
-        <div class="grid">
-          <div class="cell"><img src="../images/learnandcode/duo1.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/learnandcode/duo2.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/learnandcode/duo3.png" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/learnandcode/duostat1.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/learnandcode/duostat2.jpg" alt="" style="border-radius: 5%;"></div>
-          <div class="cell"><img src="../images/learnandcode/duostat3.png" alt="" style="border-radius: 5%;"></div>
+      <div style="padding: 5%;">
+        <h1 class="title">Language Section</h1>
+        <h2 class="subtitle" style="line-height: 2;">
+          Learning new languages was always my strong trait.<br> All of the school grades I always was top student when
+          it
+          came to learning languages - english, german, spanish and even some french. When I got out of school, I
+          realised
+          that learning languages is not only easy for me, but also fun!
+        </h2>
+      </div>
+
+      <div class="container">
+        <div class="columns is-mobile is-centered is-vcentered">
+          <div class="is-5">
+            <img src="../images/dummy.jpeg" alt="">
+          </div>
+          <div class="is-7 is-centered">
+            <h1 class="title">SWEDISH</h1><br>
+            <h2 class="subtitle">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.</h2>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="columns is-mobile is-centered is-vcentered">
+          <div class="is-7">
+            <h1 class="title">SWEDISH</h1><br>
+            <h2 class="subtitle">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.</h2>
+          </div>
+          <div class="is-5">
+            <img src="../images/dummy.jpeg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="columns is-mobile is-centered is-vcentered">
+          <div class="is-5">
+            <img src="../images/dummy.jpeg" alt="">
+          </div>
+          <div class="is-7">
+            <h1 class="title">SWEDISH</h1><br>
+            <h2 class="subtitle">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+              invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+              dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+              amet.</h2>
+          </div>
         </div>
       </div>
     </section>
